user mgmt modifications
